BUG Resolved: changing z-index of map disables interaction

--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -10,7 +10,7 @@
     position: sticky
     position: -webkit-sticky
     top: 0
-    z-index: 1000
+    z-index: 10000
 
 ::ng-deep .mat-toolbar
   color: white
