--- a/src/app/map/map.component.sass
+++ b/src/app/map/map.component.sass
@@ -8,4 +8,4 @@
   
 #map 
     height: 100%
-    z-index: -1
+    // z-index: -1
